# Back-Hackathon2025

./: .gitignore  AGENTS.md  CODE_REVIEW.md  HANDOFF.md  PLAN.md  README.md  RELEASE_CHECKLIST.md  RELEASE_SUMMARY.md  RUNBOOK.md  SESSION.md  architecture.md  file_map.md  interface_spec.md  main.py  milestones.md  project_structure_guide.txt  pyproject.toml  risks.md  security_notes.md
api/: server.py
back_hackathon2025.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
command_controller/: confirmations.py  context.py  controller.py  engine.py  executor.py  fallback_chain.py  intents.py  llm.py  logger.py  subject_extractor.py  url_resolution_cache.py  url_resolver.py  web_constants.py  web_executor.py
config/: app_settings.json  command_map.json  command_settings.json  gesture_config.json  voice_config.json
docs/: CONFIGURATION.md  QUICKSTART_WEB.md  WEB_EXECUTOR.md  architecture.mmd  login_pipeline_logging_summary.md  login_pipeline_test_plan.md
env/: .env
fw_transcribe/: __init__.py  __main__.py  cli.py  core.py
gesture_module/: __init__.py  gesture_detector.py  gesture_recognizer.py  gesture_utils.py  hand_tracking.py  workflow.py
scripts/: build_macos_app.sh  build_tauri_backend.sh  import_preset_gestures.py  tauri_backend.py  tauri_postbundle.sh
tests/: __init__.py  test_fallback_chain.py  test_subject_extractor.py  test_url_resolution_cache.py  test_url_resolver.py  test_web_executor.py
ui/: gesture_editor.py  main_window.py  voice_editor.py
utils/: cvfpscalc.py  event_bus.py  file_utils.py  log_utils.py  runtime_state.py  settings_store.py  system_utils.py  threading_utils.py
video_module/: __init__.py  gesture_ml.py  tflite_classifiers.py  tflite_pipeline.py  video_stream.py
voice_module/: stt_engine.py  stt_whisper_local.py  stt_whisperlive.py  voice_listener.py  voice_utils.py
webui/: README.md  index.html  package.json  (+1 more)
(+111 files in other folders)
