[project]
name = "back-hackathon2025"
version = "0.1.0"
description = "Hand + voice control system prototype"
requires-python = ">=3.11,<3.12"
dependencies = [
  "mediapipe>=0.10,<0.11",
  "opencv-python>=4.8,<5",
]

[tool.setuptools]
packages = [
  "command_controller",
  "gesture_module",
  "voice_module",
  "video_module",
  "utils",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
