[project]
name = "back-hackathon2025"
version = "0.1.0"
description = "Hand + voice control system prototype"
requires-python = ">=3.11,<3.12"
dependencies = [
  "mediapipe>=0.10,<0.11",
  "opencv-python>=4.8,<5",
  "openai>=1.30,<2",
  "websockets>=12,<13",
  "pyaudio>=0.2.14,<0.3",
  "python-dotenv>=1,<2",
  "faster-whisper>=1.0,<2",
  "numpy>=1.24,<2",
  "aiohttp>=3.9,<4",
]

[tool.setuptools]
packages = [
  "command_controller",
  "gesture_module",
  "voice_module",
  "video_module",
  "utils",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
